--- a/Jenkins-python/jenkinsfile/jenkinsfile
+++ b/Jenkins-python/jenkinsfile/jenkinsfile
@@ -1,9 +1,9 @@
 pipeline {
-    agent { docker { image 'python:3.7.2' } }
+    agent any 
     stages {
         stage('build') {
             steps {
-                sh 'pip install flask
+                sh 'pip install flask'
             }
         }
         stage('test') {
