--- a/Jenkins-python/jenkinsfile/jenkinsfile
+++ b/Jenkins-python/jenkinsfile/jenkinsfile
@@ -1,11 +1,11 @@
 pipeline {
     agent any 
     stages {
-        stage('build') {
-            steps {
-                sh 'pip install flask'
-            }
-        }
+        // stage('build') {
+        //     steps {
+        //         sh 'pip install flask'
+        //     }
+        // }
         stage('test') {
             steps {
                 sh 'python test.py'
