--- a/Jenkins-python/jenkinsfile/jenkinsfile
+++ b/Jenkins-python/jenkinsfile/jenkinsfile
@@ -8,7 +8,8 @@ pipeline {
         // }
         stage('test') {
             steps {
-                sh 'python test.py'
+
+                sh 'python3 test.py'
             }
         }
     }
