--- a/Jenkins-python/jenkinsfile/jenkinsfile
+++ b/Jenkins-python/jenkinsfile/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
         stage('test') {
             steps {
 
-                sh 'python3 test.py'
+               echo 'test is good' 
             }
         }
     }
